examples/test/testpolicy19715.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19715
  namespace: namespace309
spec:
  podSelector:
    matchLabels:
      key25: value24
      key24: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value7
          key48: value7
      podSelector:
        matchLabels:
          key12: value20
